--- a/main.html
+++ b/main.html
@@ -8,14 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<blockquote>
-	<p>Who was the first female to become the governor of an Indian state?</p>
-	<p>Who among first Woman to climb Mount Everest twice?</p>
-	<p>Who is President of India?</p>
-		</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
-
+	
+	<blockquote class="questions">
+		<p>Who was the first female to become the governor of an Indian state?</p>
+	</blockquote>
+	
+	<blockquote class="questions">
+		<p>Who among first Woman to climb Mount Everest twice?</p>
+	</blockquote>
+	
+	<blockquote class="questions">
+		<p>Who is President of India?</p>
+	</blockquote>	
+	
 </body>
 
 </html>
